# advanced-mcp-server-oauth-database

./: .env  commands.md  database.db  main.py  pyproject.toml
.gemini/: settings.json
backend/: database.db  database.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
